UI Layout + Resource file for labels
Започнато е изграждането на layout-a по грозния мокъп, дето са ни дали.
Добавен е файл с ресурси, където да пазим всички лейбъли, за да не седят забити в кода. Всички бутони в навбара, както и всички лейбъли във формите за регистрация и вход са преминати към използване на текст от ресурсния файл.
Има още неща за изчстване по navbar-a.

--- a/OnlineFishShop.Common/OnlineFishShop.Common.csproj
+++ b/OnlineFishShop.Common/OnlineFishShop.Common.csproj
@@ -4,4 +4,20 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\OnlineFishShopResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>OnlineFishShopResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\OnlineFishShopResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>OnlineFishShopResources.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
