--- a/OnlineFishShop.Web/appsettings.json
+++ b/OnlineFishShop.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=OnlineFishShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=OnlineFishShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
