--- a/OnlineFishShop.Web/OnlineFishShop.Web.csproj
+++ b/OnlineFishShop.Web/OnlineFishShop.Web.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\stock.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -39,6 +43,10 @@
     <Folder Include="Areas\Shopping\Data\" />
     <Folder Include="Areas\Shopping\Models\" />
     <Folder Include="Areas\Shopping\Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\images\stock.jpg" />
   </ItemGroup>
 
 </Project>
